<resources>
    <string name="app_name">Shopping Pocket Alpha</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_registerUser">Register User</string>
    <string name="label_user_name">User Name:</string>
    <string name="hint_enter_username">Enter user name ...</string>
    <string name="hint_enter_password">Enter your password ...</string>
    <string name="edittext_register_password">Password</string>
    <string name="button_search">Search</string>
    <string name="title_activity_tabbed_search">TabbedSearchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_store_details">StoreDetailsActivity</string>
    <string name="label_store_name">Store Name</string>
    <string name="title_activity_store_details_view">StoreDetailsViewActivity</string>
    <string name="label_store_address">Store Address</string>
    <string name="label_store_email">Email</string>
</resources>
